// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullAccessCard/> renders FullAccessCard with variant:general 1`] = `
<div>
  <div
    class="sc-bdfBwQ jiStgD"
  >
    <div
      class="sc-gsTCUz bxlNW"
    >
      Card
    </div>
  </div>
</div>
`;

exports[`<FullAccessCard/> renders FullAccessCard with variant:withActionItem 1`] = `
<div>
  <div
    class="sc-bdfBwQ jPLiSs"
  >
    <div
      class="sc-gsTCUz bxlNW"
    >
      Card
    </div>
  </div>
</div>
`;
